--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,10 @@
     "python.linting.flake8Enabled": true,
     "python.linting.pylintEnabled": false,
     "python.linting.enabled": true,
+    "editor.formatOnSave": true,
     "python.formatting.provider": "black",
     "python.linting.flake8Args": [
-        "--max-line-length=88"
-    ]
+        "--max-line-length=100"
+    ],
+    "python.pythonPath": "/usr/bin/python3"
 }
