--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,24 @@
+appdirs==1.4.4
+attrs==19.3.0
+black==19.10b0
+certifi==2020.4.5.2
+chardet==3.0.4
+click==7.1.2
 Django==2.2.5
 django-countries==6.1.2
 django-dotenv==1.4.2
 django-seed==0.2.2
 Faker==4.1.0
+idna==2.9
+pathspec==0.8.0
 Pillow==7.1.2
 python-dateutil==2.8.1
 pytz==2020.1
+regex==2020.6.8
+requests==2.23.0
 six==1.15.0
 sqlparse==0.3.1
 text-unidecode==1.3
+toml==0.10.1
+typed-ast==1.4.1
+urllib3==1.25.9
