--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,8 @@ cython_debug/
 uploads/
 
 node_modules/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
